Fix sonar issues.